Change ActionSortingAlgorithm to use Stacks instead of ArrayLists, change subclasses to correctly add initial actions